Add test cases for VM networking
1) test change management network to external VLAN
2) test change external VLAN to management network
3) update test code to no longer look for first-login password reset
   as that API is unstable. Also, doesn't appear Harvester API is enforcing
   first-login password reset.
4) update the external host management scripts to accept both hostname and IP
   of the Harvester node

--- a/scripts/vagrant/power_off.sh.example
+++ b/scripts/vagrant/power_off.sh.example
@@ -2,19 +2,21 @@
 
 set -e
 
-USAGE="${0}: <hostname>
+USAGE="${0}: <hostname> <host IP>
 
 Where:
 
   <hostname>: host name of the Vagrant Harvester node
+  <host IP>: IP address of the Harvester node
 "
 
-if [ $# -ne 1 ] ; then
+if [ $# -ne 2 ] ; then
         echo "$USAGE"
         exit 1
 fi
 
 HOSTNAME=$1
+IP=$2
 
 pushd /home/foo/ipxe-examples/vagrant-pxe-harvester
 vagrant ssh-config $HOSTNAME
