--- a/config.yml
+++ b/config.yml
@@ -27,4 +27,5 @@ rancher-endpoint: ~
 
 node-scripts-location: 'scripts/vagrant'
 
-win-image-url: 'http://10.84.144.252/meera/ws2016.qcow2'
+# URL to download the Windows image
+win-image-url: ''
