Terraform apis/scenarios tests

--- a/config.yml
+++ b/config.yml
@@ -29,3 +29,5 @@ node-scripts-location: 'scripts/vagrant'
 
 # URL to download the Windows image
 win-image-url: ''
+
+terraform-scripts-location: 'terraform_test_artifacts'
