--- a/tox.ini
+++ b/tox.ini
@@ -12,8 +12,10 @@ setenv =
 deps = pytest
        -r{toxinidir}/test-requirements.txt
 commands =
+  {toxinidir}/terraform_test_artifacts/terraform_provider_install.sh 0.2.2
   find . -type f -name "*.pyc" -delete
   pytest {posargs}
+  {toxinidir}/terraform_test_artifacts/terraform_provider_cleanup.sh
 whitelist_externals =
   bash
   find
