--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,7 @@ deps = pytest
 commands =
   {toxinidir}/terraform_test_artifacts/terraform_provider_install.sh 0.2.2
   find . -type f -name "*.pyc" -delete
-  pytest {posargs}
+  pytest -rP {posargs}
   {toxinidir}/terraform_test_artifacts/terraform_provider_cleanup.sh
 whitelist_externals =
   bash
