Customizable image download location
Some image download locations (i.e. download.opensuse.org) can be
slow at times. To speed up the tests, one can cache the images in a local
server. This change enables alternative image location by introducing the
'--image-cache-url' parameter. For example, to run the tests with a local
image cache server:

tox -e py38 -- harvester_e2e_tests/apis/test_images.py --endpoint https://192.168.0.131:30443 --image-cache-url http://10.84.144.252/harvester_vm_images_for_tests

--- a/config.yml
+++ b/config.yml
@@ -30,4 +30,7 @@ node-scripts-location: 'scripts/vagrant'
 # URL to download the Windows image
 win-image-url: ''
 
+# URL to download all images
+image-cache-url: ''
+
 terraform-scripts-location: 'terraform_test_artifacts'
