--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ setenv =
 deps = pytest
        -r{toxinidir}/test-requirements.txt
 commands =
-  {toxinidir}/terraform_test_artifacts/terraform_provider_install.sh 0.2.5
+  bash -c 'if [[ "{posargs}" == *"-m terraform"* ]] ; then {toxinidir}/terraform_test_artifacts/terraform_provider_install.sh ; fi'
   find . -type f -name "*.pyc" -delete
   pytest {posargs}
 whitelist_externals =
