--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,7 @@ setenv =
 deps = pytest
        -r{toxinidir}/test-requirements.txt
 commands =
+  {toxinidir}/terraform_test_artifacts/terraform_install.sh
   {toxinidir}/terraform_test_artifacts/terraform_provider_install.sh
   find . -type f -name "*.pyc" -delete
   pytest {posargs}
