--- a/tox.ini
+++ b/tox.ini
@@ -24,3 +24,6 @@ passenv = http_proxy HTTP_PROXY https_proxy HTTPS_PROXY no_proxy NO_PROXY PBR_VE
 deps = flake8
 commands =
   flake8
+
+[pytest]
+render_collapsed = True
