updated config with correct URL in config.toml

--- a/docs/config.toml
+++ b/docs/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://test.local/harvester-tests"
+baseURL = "https://harvester.github.io/tests"
 languageCode = "en-us"
 title = "Harvester manual test cases"
 disableKinds = ["taxonomyTerm"]
