Add pull_request trigger for the gh-pages-workflow

--- a/.github/workflows/gh-pages-workflow.yml
+++ b/.github/workflows/gh-pages-workflow.yml
@@ -5,6 +5,11 @@ on:
       - main
     paths:
       - docs/**
+  pull_request:
+    branches:
+      - main
+    paths:
+      - docs/**
 
 jobs:
   gh-pages:
