--- a/.github/workflows/gh-pages-workflow.yml
+++ b/.github/workflows/gh-pages-workflow.yml
@@ -20,6 +20,8 @@ jobs:
         python: [3.6, 3.8]
 
     steps:
+        - name: Checkout
+        uses: actions/checkout@v2
       - name: Fetch gh-pages branch
         run: |
           git fetch --depth=1 origin gh-pages
