Don't run pep8 check for docs changes

--- a/.github/workflows/ci-worflow.yml
+++ b/.github/workflows/ci-worflow.yml
@@ -1,8 +1,12 @@
 name: PEP8 Check 
 
 on:
-  - push
-  - pull_request
+  push:
+    paths-ignore:
+      - docs/**
+  pull_request:
+    paths-ignore:
+      - docs/**
 
 jobs:
   build:
