Reorganize the workflows
Split push and PR workflows since push also does publishing. We don't want
to publish till the PR is approved.

--- a/.github/workflows/gh-pages-push-workflow.yml
+++ b/.github/workflows/gh-pages-push-workflow.yml
@@ -1,11 +1,6 @@
-name: GH-Pages
+name: GH-Pages-Push
 on:
   push:
-    branches:
-      - main
-    paths:
-      - docs/**
-  pull_request:
     branches:
       - main
     paths:
