--- a/.github/workflows/ci-worflow.yml
+++ b/.github/workflows/ci-worflow.yml
@@ -4,9 +4,11 @@ on:
   push:
     paths-ignore:
       - docs/**
+      - .github/**
   pull_request:
     paths-ignore:
       - docs/**
+      - .github/**
 
 jobs:
   build:
