Installing Rancher on Harvester VM for rancher integration tests

--- a/config.yml
+++ b/config.yml
@@ -44,3 +44,4 @@ bucketName: ''
 nfs-endpoint: ''
 
 backup-scripts-location: 'backup_restore_test_artifacts'
+rancher-scripts-location: 'rancher_integration_test_artifacts'
