* default download folder, new tag `run-once`
* enable default download folder
  new config variable `BROWSER_DOWNLOAD_PATH` used to configure the
folder to store downloaded files.
  related modified files:
	- login.robot
	- login_utils.py

* add new tag `run-once`
  to point out some test cases can only be run once.
  related modified files:
	- 00__first_time_login.robot

* misc fix
  reduce asterisks (for editor syntax highlight), increase waiting
time for keyword stabability.
  related modified files:
	- dashboard.robot
	- navigate.robot

Signed-off-by: Lanfon Fan <lanfon.fan@suse.com>

--- a/config.py.example
+++ b/config.py.example
@@ -4,6 +4,9 @@
 Harvester_URL = "https://127.0.0.1:30443/"
 TESTING_BROWSER = "Chrome"
 BROWSER_WAIT_TIMEOUT = "30s"
+BROWSER_DOWNLOAD_PATH = ""
+# default download path will be placed to "{OUTPUT FILE}-downlaods"
+# You can check `atest/resources/login_utils.py` for more information
 
 # Login
 HARVESTER_USERNAME = "admin"
