--- a/.github/workflows/gh-pages-push-workflow.yml
+++ b/.github/workflows/gh-pages-push-workflow.yml
@@ -46,6 +46,7 @@ jobs:
           git rm -r --ignore-unmatch .
           popd > /dev/null
           mv docs/public/* "$gh_pages_worktree"
+          touch ${gh_pages_worktree}/.nojekyll
           pushd "$gh_pages_worktree" > /dev/null
           git add .
           # Only commit files if changes are detected
