Improve Rancher integration test
1. Refactor the Rancher integration tests into their own file.
2. Require external Rancher instance. Running a Rancher VM in Harvester is
   reliable, especially in networking. As such, the Rancher VM setup code is
   being removed.
3. Retry on 500 on all HTTP methods.

--- a/config.yml
+++ b/config.yml
@@ -46,7 +46,18 @@ nfs-endpoint: ''
 nfs-mount-dir: 'nfsshare'
 
 backup-scripts-location: 'backup_restore_test_artifacts'
-rancher-scripts-location: 'rancher_integration_test_artifacts'
 
 # Rancher Docker image version to use
 rancher-version: 'v2.6-head'
+
+# External Rancher endpoint
+#rancher-endpoint: 'https://127.0.0.1
+
+# External Rancher admin user password
+#rancher-admin-password: 'rancher_password'
+
+# Kubernetes version to use for Rancher integration tests
+kubernetes-version: 'v1.21.7+rke2r2'
+
+# Wait time for polling Rancher cluster status.
+rancher-cluster-wait-timeout: 1200
