--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,10 @@ terraform_test_artifacts/bin
 *.DS_Store
 *config
 .idea
+cypress/node_modules
+*yarn.lock
+*package-lock.json
+cypress/videos/*
+cypress/support/*
+cypress/screenshots/*
+cypress/plugins/*
