--- a/cypress/package.json
+++ b/cypress/package.json
@@ -1,9 +1,14 @@
 {
   "devDependencies": {
+    "@types/js-yaml": "^4.0.5",
     "typescript": "^4.5.4"
   },
   "dependencies": {
     "@types/cypress": "^1.1.3",
-    "cypress": "9.3.1"
+    "adm-zip": "^0.5.9",
+    "cypress": "9.3.1",
+    "js-yaml": "^4.1.0",
+    "js-yaml-js-types": "^1.0.0",
+    "yaml": "^1.10.2"
   }
 }
