moved pageobjects, added support page, hosts page and associated specs. Fixed login spec
updated edit YAML tests to get clearYaml() working. Added in config for typedoc to be able to generate static site based on jsdoc comments in code.

updated PR workflow with typedoc changes

fixed typedoc path in CI action

fixed typedoc path in CI action again

--- a/.github/workflows/gh-pages-pr-workflow.yml
+++ b/.github/workflows/gh-pages-pr-workflow.yml
@@ -5,6 +5,7 @@ on:
       - main
     paths:
       - docs/**
+      - cypress/**
 
 jobs:
   gh-pages:
@@ -33,3 +34,11 @@ jobs:
         run: |
           hugo
         working-directory: ./docs/
+      - name: install typedoc
+        run: |
+          npm install
+        working-directory: ./cypress/
+      - name: run typedoc
+        run: |
+          ./node_modules/.bin/typedoc --options ./typedoc.json
+        working-directory: ./cypress/
