--- a/.github/workflows/gh-pages-push-workflow.yml
+++ b/.github/workflows/gh-pages-push-workflow.yml
@@ -33,6 +33,15 @@ jobs:
         run: |
           hugo
         working-directory: ./docs/
+      - name: install typedoc
+        run: |
+          npm install
+        working-directory: ./cypress/
+      - name: run typedoc
+        run: |
+          ./node_modules/.bin/typedoc --options ./typedoc.json
+          mv docs/ ../docs/content/integration
+        working-directory: ./cypress/
       - name: Configure Git
         run: |
           git config user.name "$GITHUB_ACTOR"
