updated typedoc.json with proper title. Added in mv command and tried to fix relative path issue with links
fixed mv path in actions to go to public not content

--- a/.github/workflows/gh-pages-pr-workflow.yml
+++ b/.github/workflows/gh-pages-pr-workflow.yml
@@ -41,4 +41,5 @@ jobs:
       - name: run typedoc
         run: |
           ./node_modules/.bin/typedoc --options ./typedoc.json
+          mv docs/ ../docs/public/integration
         working-directory: ./cypress/
