--- a/.github/workflows/gh-pages-pr-workflow.yml
+++ b/.github/workflows/gh-pages-pr-workflow.yml
@@ -35,16 +35,12 @@ jobs:
         run: |
           hugo
         working-directory: ./docs/
-      - name: Install pdoc3
-        run: |
-          pip install pdoc3
       - name: install requirements
         run: |
           pip install -r test-requirements.txt
-        working-directory: ./
       - name: Run pdoc3
         run: |
-          pdoc -o . .
+          pdoc --html -o . .
           mv harvester_e2e_tests/ ../docs/public/backend
         working-directory: ./harvester_e2e_tests
       - name: install typedoc
