--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,5 @@
 # Harvester API endpoint
-endpoint: 'https:/localhost'
+endpoint: 'https://localhost:30443'
 
 #Harvester username
 username: 'admin'
