--- a/cypress/package.json
+++ b/cypress/package.json
@@ -4,8 +4,6 @@
     "@types/adm-zip": "^0.4.34",
     "@types/js-yaml": "^4.0.5",
     "cypress-dotenv": "^2.0.0",
-    "dotenv": "^16.0.0",
-    "start-server-and-test": "^1.13.1",
     "typedoc": "^0.22.11",
     "typescript": "^4.5.4"
   },
@@ -15,9 +13,11 @@
     "cookie": "^0.4.2",
     "cookie-parser": "^1.4.6",
     "cypress": "9.3.1",
-    "cypress-skip-and-only-ui": "^1.2.14",
     "js-yaml": "^4.1.0",
     "js-yaml-js-types": "^1.0.0",
     "yaml": "^1.10.2"
+  },
+  "engines": {
+    "node": "^12.22 || ^14.13 || >=16"
   }
 }
