--- a/cypress/package.json
+++ b/cypress/package.json
@@ -4,6 +4,7 @@
     "@types/adm-zip": "^0.4.34",
     "@types/js-yaml": "^4.0.5",
     "cypress-dotenv": "^2.0.0",
+    "dotenv": "^16.0.0",
     "typedoc": "^0.22.11",
     "typescript": "^4.5.4"
   },
