--- a/cypress/package.json
+++ b/cypress/package.json
@@ -6,6 +6,9 @@
     "@types/js-yaml": "^4.0.5",
     "cypress-dotenv": "^2.0.0",
     "dotenv": "^16.0.0",
+    "mochawesome": "^7.1.3",
+    "mochawesome-merge": "^4.2.1",
+    "mochawesome-report-generator": "^6.2.0",
     "typedoc": "^0.22.11",
     "typescript": "^4.5.4"
   },
@@ -21,5 +24,10 @@
   },
   "engines": {
     "node": "^12.22 || ^14.13 || >=16"
+  },
+  "scripts": {
+    "delete:reports": "rm cypress/results/* || true",
+    "prereport": "yarn run delete:reports",
+    "report": "node scripts/run.js"
   }
 }
