Cypress: Increase index of labels since Images have default labels now

--- a/cypress/package.json
+++ b/cypress/package.json
@@ -26,7 +26,7 @@
   },
   "scripts": {
     "delete:reports": "rm cypress/results/* || true",
-    "prereport": "yarn run delete:reports",
+    "prereport": "npm run delete:reports",
     "report": "node scripts/run.js"
   }
 }
