--- a/cypress/package.json
+++ b/cypress/package.json
@@ -27,7 +27,7 @@
   },
   "scripts": {
     "delete:reports": "rm cypress/results/* || true",
-    "prereport": "yarn run delete:reports",
+    "prereport": "npm run delete:reports",
     "report": "node scripts/run.js"
   }
 }
