added in download verifier for support bundle and added a test case for checking the support bundle download. Also added in custom commands for cy.verifyDownload and associated yarn and dependency stuff

--- a/cypress/package.json
+++ b/cypress/package.json
@@ -4,6 +4,7 @@
     "@cypress/vue": "^2.2.3",
     "@types/adm-zip": "^0.4.34",
     "@types/js-yaml": "^4.0.5",
+    "cy-verify-downloads": "^0.1.8",
     "cypress-dotenv": "^2.0.0",
     "dotenv": "^16.0.0",
     "mochawesome": "^7.1.3",
