updated packages for cypress v10.x and updated cypress.config.ts from the default one that was created in the migration and updated the spec match string

--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -24,9 +24,7 @@
     },
     "types": [
       "@types/node",
-      "cypress",
-      "cy-verify-downloads"
-
+      "cypress"
     ]
   },
   "include": ["**/*.ts"],
