Expand Harvester-Installer Vagrant Pipeline
- Adding support for single node Rancher either air-gapped or
  non-air-gapped
- Allowing for a testing stage to run tests
- Adding additional parameters to control the desired loadout for the
  Rancher instance
- Additionally adding the 'pipeline-utility-steps' plugin which gives us
  the ability to read/write yaml files within the pipelines
- Adding support to set the Harvester Dashboard password via YAML
  settings
- Addtional supporting edits allowing for pipeline to be re-run with
  builds in various configurations (versions of K3s, Rancher, etc.)

Resolves: feat/2096-jenkins-pipeline-edits-for-harvester-installer-ci

--- a/CI/harvester-installer/roles/jenkins/tasks/install_jenkins.yml
+++ b/CI/harvester-installer/roles/jenkins/tasks/install_jenkins.yml
@@ -59,6 +59,7 @@
     - pam-auth
     - pipeline-github-lib
     - pipeline-stage-view
+    - pipeline-utility-steps
     - ssh-slaves
     - timestamper
     - workflow-aggregator
