--- a/cypress/cypress.env.json.example
+++ b/cypress/cypress.env.json.example
@@ -17,6 +17,6 @@
   "image":
   {
     "name": "openSUSE-Leap-15.3-3-DVD-x86_64-Build38.1-Media.iso",
-    "url": "https://mirrors.bfsu.edu.cn/opensuse/distribution/leap/15.3/iso/openSUSE-Leap-15.3-3-DVD-x86_64-Build38.1-Media.iso"
+    "url": "https://download.opensuse.org/distribution/leap/15.3/iso/openSUSE-Leap-15.3-3-DVD-x86_64-Build38.1-Media.iso"
   }
 }
