Adding Support Core Plugin
* this adds the support-core plugin to the infrastructure scripting

Resolves: feat/support-core-plugin-introduction

--- a/CI/harvester-installer/roles/jenkins/tasks/install_jenkins.yml
+++ b/CI/harvester-installer/roles/jenkins/tasks/install_jenkins.yml
@@ -60,6 +60,7 @@
     - pipeline-github-lib
     - pipeline-stage-view
     - ssh-slaves
+    - support-core
     - timestamper
     - workflow-aggregator
     - workflow-cps
