--- a/CI/harvester-installer/roles/jenkins/tasks/install_vagrant.yml
+++ b/CI/harvester-installer/roles/jenkins/tasks/install_vagrant.yml
@@ -1,4 +1,5 @@
 ---
+# TODO: build something that instead parses - https://releases.hashicorp.com/vagrant/ 
 - name: jenkins | install_vagrant |
         Get the latest vagrant release from github tags
   shell: >
