WIP: Now Node Gets Automatically Added
* automatically adding node to main jenkins controller
* automatically on secondary node creating public and private key
* automatically setting up public key for jenkins user on secondary node
  to be allowed as an authorized key
* scaffolding a way to automate updating the credential built on main
  node for the secondary node ssh
* wip on being able to run ssh-keyscan on main node of secondary node's
  ssh fingerprints for jenkins known_hosts file

Resolves: feat/2096-infrastructure-provisioning-edits

--- a/CI/harvester-installer/roles/jenkins_slave/tasks/main.yml
+++ b/CI/harvester-installer/roles/jenkins_slave/tasks/main.yml
@@ -21,6 +21,9 @@
       Match User jenkins
           PasswordAuthentication yes
 
+- name: jenkins | secondary-node | setup ssh key private and public
+  include_tasks: setup_key_validation_for_jenkins.yml
+
 - name: jenkins | main | Reboot
   reboot:
     msg: "Reboot for the permission changes to take effect"
