Cypress: Refactor Images & Volumes

--- a/cypress/cypress.env.json.example
+++ b/cypress/cypress.env.json.example
@@ -14,9 +14,12 @@
       }
     ]
   },
-  "image":
-  {
+  "largeImage": {
     "name": "openSUSE-Leap-15.3-3-DVD-x86_64-Build38.1-Media.iso",
-    "url": "https://download.opensuse.org/distribution/leap/15.3/iso/openSUSE-Leap-15.3-3-DVD-x86_64-Build38.1-Media.iso"
+    "url": "https://mirrors.bfsu.edu.cn/opensuse/distribution/leap/15.3/iso/openSUSE-Leap-15.3-3-DVD-x86_64-Build38.1-Media.iso"
+  },
+  "image": {
+    "name": "cirros-0.5.2-aarch64-disk.img",
+    "url": "https://github.com/cirros-dev/cirros/releases/download/0.5.2/cirros-0.5.2-aarch64-disk.img"
   }
 }
