--- a/cypress/package.json
+++ b/cypress/package.json
@@ -11,7 +11,8 @@
     "mochawesome-merge": "^4.2.1",
     "mochawesome-report-generator": "^6.2.0",
     "typedoc": "^0.22.11",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.4",
+    "yaml": "^2.1.3"
   },
   "dependencies": {
     "@types/cypress": "^1.1.3",
@@ -20,8 +21,7 @@
     "cookie-parser": "^1.4.6",
     "cypress": "10.2",
     "js-yaml": "^4.1.0",
-    "js-yaml-js-types": "^1.0.0",
-    "yaml": "^1.10.2"
+    "js-yaml-js-types": "^1.0.0"
   },
   "engines": {
     "node": "^12.22 || ^14.13 || >=16"
