Initial release of Cypress Rancher Integration test with Harveter
Including the following test cases:

1. Prepare Harvester Image (On Harvester)
2. Prepare Harvester VLAN network (On Harvester)
4. Rancher import Harvester
5. Harvester import Rancher (On Harvester)
6. Check Harvester Cluster Status (On Rancher)
7. Create Cloud Credential
8. Provisiong RKE2 Cluster
9. Check RKE2 Cluster Status
10. Provisiong K3s Cluster
11. Check K3s Cluster Status
12. Verify RKE2 CSI driver
13. Verify RKE2 Cloud Provider
14. Verify RKE2 DHDP Load Balancer
15. Create Harvester VIP Pool
16. Create RKE2 Pool Load Balancer
17. Delete Active RKE2 Cluster
18. Delete Active K3s Cluster
19. Delete Cloud Credential
20. Delete imported Harveter cluster

singed-off by davidtclin58@gmail.com

--- a/cypress/cypress.env.json.example
+++ b/cypress/cypress.env.json.example
@@ -3,6 +3,12 @@
   "username": "admin",
   "password": "admin",
   "baseUrl": "https://online-server",
+  "rancherUrl": "https://rancher-server",
+  "rancher_user": "admin",
+  "rancher_password": "passwdpasswd",
+  "rancher_vm_user": "vagrant",
+  "rancher_vm_password": "vagrant",
+  "vagrant_pxe_path": "../ipxe-examples/vagrant-pxe-harvester",
   "host":
   {
     "name": "",
