Fix the review request 1. Rebase and use the new Harvester function for prepare image and create vlan 2. Remove the unused import and function 3. Handle the popup confirm window of cluster registration in Harvester 4. Fix some stability 5. Use  `LabeledSelectPo` to precisely handle dropdown menu selection

--- a/cypress/cypress.env.json.example
+++ b/cypress/cypress.env.json.example
@@ -21,5 +21,9 @@
   "image": {
     "name": "cirros-0.5.2-aarch64-disk.img",
     "url": "https://github.com/cirros-dev/cirros/releases/download/0.5.2/cirros-0.5.2-aarch64-disk.img"
+  },
+  "guest_cluster_image": {
+    "name": "focal-server-cloudimg-amd64.img",
+    "url": "https://cloud-images.ubuntu.com/focal/current/focal-server-cloudimg-amd64.img"
   }
 }
