--- a/cypress/cypress.env.json.example
+++ b/cypress/cypress.env.json.example
@@ -2,6 +2,7 @@
   "NODE_ENV": "production",
   "username": "admin",
   "password": "admin",
+  "mockPassword": "mockPassword",
   "baseUrl": "https://online-server",
   "host":
   {
