--- a/tox.ini
+++ b/tox.ini
@@ -18,7 +18,7 @@ commands =
 whitelist_externals =
   bash
   find
-passenv = http_proxy HTTP_PROXY https_proxy HTTPS_PROXY no_proxy NO_PROXY PBR_VERSION
+passenv = http_proxy,HTTP_PROXY,https_proxy,HTTPS_PROXY,no_proxy,NO_PROXY,PBR_VERSION
 
 [testenv:pep8]
 deps = flake8
