--- a/CI/harvester-installer/roles/jenkins/tasks/install_vagrant_on_Debian.yml
+++ b/CI/harvester-installer/roles/jenkins/tasks/install_vagrant_on_Debian.yml
@@ -1,7 +1,10 @@
 ---
+# NOTE: this is strange...I have no idea why the `-1` on the package has to be present now...but it seems they changed
+# the way they are serving the packages... idk... here's to being "optimistic" that they won't change their file
+# serving pattern again in the future...
 - name: jenkins | install_vagrant_on_Debian | Install vagrant package
   apt:
-    deb: https://releases.hashicorp.com/vagrant/{{ LATEST_VAGRANT_VERSION }}/vagrant_{{ LATEST_VAGRANT_VERSION }}_x86_64.deb
+    deb: https://releases.hashicorp.com/vagrant/{{ LATEST_VAGRANT_VERSION }}/vagrant_{{ LATEST_VAGRANT_VERSION }}-1_amd64.deb
 
 - name: jenkins | install_vagrant_on_Debian | Install build essentials
   apt:
@@ -10,7 +13,7 @@
 
 - name: jenkins | install_vagrant_on_Debian | Install KVM
   apt:
-    name: [qemu-kvm, libvirt-daemon-system, libvirt-clients, bridge-utils, virtinst, virt-manager, libvirt-dev]
+    name: [qemu-system-x86, libvirt-daemon-system, libvirt-clients, bridge-utils, virtinst, virt-manager, libvirt-dev]
     state: latest
 
 - name: jenkins | install_vagrant_on_Debian | Add jenkins user to libvirt group
