--- a/config.yml
+++ b/config.yml
@@ -1,17 +1,17 @@
 # Harvester API endpoint
 endpoint: 'https://localhost:30443'
 
-#Harvester username
+# Harvester username
 username: 'admin'
 
-#Harvester password
+# Harvester password
 password: 'password1234'
 
 # To access Harvester node, fill in one of following is enough.
 host-password: ''
 host-private-key: ''
 
-#Do not cleanup the test artifacts
+# Do not cleanup the test artifacts
 do-not-cleanup: False
 
 # harvester_cluster_nodes
@@ -23,8 +23,11 @@ vlan-id: 1
 # Physical NIC for VLAN. Default is "harvester-mgmt"
 vlan-nic: 'harvester-mgmt'
 
-#Wait time for polling operations
+# Wait time for polling operations
 wait-timeout: 600
+
+# Sleep time for polling operations
+sleep-timeout: 3
 
 node-scripts-location: 'scripts/vagrant'
 
