--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,12 @@
 [tox]
-envlist = py36,py38,pep8
+envlist = py36, py38, pep8
 # TODO(gyee): we are not distributing the test code right now. Will need
 # to revisit this once we have majority of the tests developed.
 skipsdist = True
+skip_missing_interpreters = True
+ignore_basepython_conflict = True
+commands_pre = 
+  pip freeze --all
 
 [testenv]
 basepython = python3
@@ -15,7 +19,9 @@ commands =
   {toxinidir}/terraform_test_artifacts/terraform_install.sh
   find . -type f -name "*.pyc" -delete
   pytest {posargs}
-allowlist_externals = {toxinidir}/*,bash,find
+whitelist_externals =
+  bash
+  find
 passenv = http_proxy,HTTP_PROXY,https_proxy,HTTPS_PROXY,no_proxy,NO_PROXY,PBR_VERSION
 
 [testenv:pep8]
