--- a/config.yml
+++ b/config.yml
@@ -34,6 +34,9 @@ node-scripts-location: 'scripts/vagrant'
 # URL to download the Windows image
 win-image-url: ''
 opensuse-image-url: https://download.opensuse.org/repositories/Cloud:/Images:/Leap_15.3/images/openSUSE-Leap-15.3.x86_64-NoCloud.qcow2
+# Jammy by default
+# Jammy is needed for OpenStack integration tests as Focal is not supported by OpenStack microstack
+ubuntu-image-url: https://cloud-images.ubuntu.com/releases/jammy/release/ubuntu-22.04-server-cloudimg-amd64-disk-kvm.img
 # URL to download all images
 image-cache-url: ''
 
