[Cypress] Add e2e docker image

--- a/cypress/Dockerfile
+++ b/cypress/Dockerfile
@@ -1,4 +1,7 @@
-FROM node:16
+FROM cypress/base:16
+
+ADD https://dl.min.io/client/mc/release/linux-amd64/mc /usr/local/bin/mc
+RUN chmod +x /usr/local/bin/mc
 
 RUN mkdir /src
 WORKDIR /src
@@ -7,6 +10,6 @@ COPY . /src
 
 RUN yarn install
 
-ENV PATH /app/node_modules/.bin:$PATH
+ENV PATH /src/node_modules/.bin:$PATH
 
-CMD ["yarn", "run", "e2e"]
+CMD ["./scripts/e2e"]
