--- a/cypress/package.json
+++ b/cypress/package.json
@@ -38,7 +38,7 @@
     "prereport": "npm run delete:reports",
     "report": "node scripts/run.js",
     "open": "./node_modules/.bin/cypress open",
-    "e2e": "yarn run delete:reports && ./node_modules/.bin/cypress run --browser chrome --reporter mochawesome",
+    "e2e": "./node_modules/.bin/cypress run --browser electron --reporter mochawesome",
     "report:merge": "rm -rf cypress/results/merge && mkdir -p cypress/results/merge && ./node_modules/.bin/mochawesome-merge 'cypress/results/*.json' > cypress/results/merge/mochawesome.json && ./node_modules/.bin/marge cypress/results/merge/mochawesome.json -o cypress/results/mochawesome-report",
     "report:html": "yarn report:merge && open cypress/results/mochawesome-report/mochawesome.html"
   }
