[CY] Fix snapshot case

--- a/cypress/Dockerfile
+++ b/cypress/Dockerfile
@@ -1,15 +1,19 @@
 FROM cypress/base:16
 
+RUN apt-get update
+RUN apt-get install -y git
+
 ADD https://dl.min.io/client/mc/release/linux-amd64/mc /usr/local/bin/mc
 RUN chmod +x /usr/local/bin/mc
 
-RUN mkdir /src
-WORKDIR /src
+RUN git clone https://github.com/harvester/tests.git
 
-COPY . /src
+WORKDIR /tests/cypress
+
+COPY . /tests/cypress
 
 RUN yarn install
 
-ENV PATH /src/node_modules/.bin:$PATH
+ENV PATH /tests/cypress/node_modules/.bin:$PATH
 
 CMD ["./scripts/e2e"]
