Add cypress test case

--- a/cypress/cypress.env.json.example
+++ b/cypress/cypress.env.json.example
@@ -28,5 +28,7 @@
   "image": {
     "name": "cirros-0.5.2-aarch64-disk.img",
     "url": "https://github.com/cirros-dev/cirros/releases/download/0.5.2/cirros-0.5.2-aarch64-disk.img"
-  }
+  },
+  "sshKey": "ssh-rsa GgVY6KnKpJqrBd/BGuUoHhh/C3CXhDojb1G1Td6hktaUwH+Q== username@email.com",
+  "privateKeyPath": "/Users/username/.ssh/id_rsa"
 }
