--- a/cypress/package.json
+++ b/cypress/package.json
@@ -28,6 +28,7 @@
     "cypress": "10.8",
     "js-yaml": "^4.1.0",
     "js-yaml-js-types": "^1.0.0",
+    "node-ssh": "^13.0.0",
     "yaml": "^2.3.1"
   },
   "engines": {
