[Cy] Support vlan Id

--- a/cypress/cypress.env.json.example
+++ b/cypress/cypress.env.json.example
@@ -29,6 +29,16 @@
     "name": "cirros-0.5.2-aarch64-disk.img",
     "url": "https://github.com/cirros-dev/cirros/releases/download/0.5.2/cirros-0.5.2-aarch64-disk.img"
   },
+  "vlans": [
+    {
+      "nic": "ens7",
+      "vlan": 100
+    },
+    {
+      "nic": "ens8",
+      "vlan": 104
+    },
+  ],
   "sshKey": "ssh-rsa GgVY6KnKpJqrBd/BGuUoHhh/C3CXhDojb1G1Td6hktaUwH+Q== username@email.com",
   "privateKeyPath": "/Users/username/.ssh/id_rsa"
 }
