--- a/cypress/cypress.env.json.example
+++ b/cypress/cypress.env.json.example
@@ -5,8 +5,8 @@
   "mockPassword": "mockPassword",
   "baseUrl": "https://online-server",
   "rancherUrl": "https://rancher-server",
-  "rancher_user": "admin",
-  "rancher_password": "admin",
+  "rancherUser": "admin",
+  "rancherPassword": "admin",
   "rancher_vm_user": "vagrant",
   "rancher_vm_password": "vagrant",
   "vagrant_pxe_path": "../ipxe-examples/vagrant-pxe-harvester",
