* fix pytest config in different python version

--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,7 @@ deps = pytest
 commands =
   {toxinidir}/terraform_test_artifacts/terraform_install.sh
   find . -type f -name "*.pyc" -delete
-  pytest {posargs}
+  pytest -c {env:PYTEST_CONFIG:{toxinidir}/tox.ini} {posargs}
 allowlist_externals = {toxinidir}/*,bash,find
 passenv = http_proxy,HTTP_PROXY,https_proxy,HTTPS_PROXY,no_proxy,NO_PROXY,PBR_VERSION
 
@@ -28,3 +28,7 @@ max-line-length = 99
 
 [pytest]
 render_collapsed = all
+
+[testenv:py36]
+setenv =
+    PYTEST_CONFIG = {toxinidir}/py36_pytest.ini
