Support multi VMs RKE cluster; Drop unused rancher-version config

--- a/tox.ini
+++ b/tox.ini
@@ -11,11 +11,13 @@ setenv =
     PYTHONWARNINGS = ignore:Unverified HTTPS request
 deps = pytest
        -r{toxinidir}/test-requirements.txt
+allowlist_externals = {toxinidir}/*
+                      bash
+                      find
 commands =
   {toxinidir}/terraform_test_artifacts/terraform_install.sh
   find . -type f -name "*.pyc" -delete
   pytest -c {env:PYTEST_CONFIG:{toxinidir}/tox.ini} {posargs}
-allowlist_externals = {toxinidir}/*,bash,find
 passenv = http_proxy,HTTP_PROXY,https_proxy,HTTPS_PROXY,no_proxy,NO_PROXY,PBR_VERSION
 
 [testenv:pep8]
