--- a/cypress/cypress.env.json.example
+++ b/cypress/cypress.env.json.example
@@ -5,11 +5,9 @@
   "mockPassword": "mockPassword",
   "baseUrl": "https://online-server",
   "rancherUrl": "https://rancher-server",
-  "rancher_user": "admin",
-  "rancher_password": "admin",
-  "rancher_vm_user": "vagrant",
-  "rancher_vm_password": "vagrant",
-  "vagrant_pxe_path": "../ipxe-examples/vagrant-pxe-harvester",
+  "rancherUser": "admin",
+  "rancherPassword": "admin",
+  "rancherBootstrapPassword": "admin",
   "host":
   {
     "name": "",
