* [e2e] [Stop VM Negative] - change node scheduling selector; add host.customName config
Signed-off-by: Francesco Torchia <francesco.torchia@suse.com>

--- a/cypress/cypress.env.json.example
+++ b/cypress/cypress.env.json.example
@@ -8,17 +8,19 @@
   "rancherUser": "admin",
   "rancherPassword": "admin",
   "rancherBootstrapPassword": "admin",
-  "host":
-  {
-    "name": "",
-    "disks":
-    [
-      {
-        "name": "",
-        "devPath": ""
-      }
-    ]
-  },
+  "host": [
+    {
+      "name": "",
+      "customName": "",
+      "disks": [
+        {
+          "name": "",
+          "devPath": ""
+        }
+      ],
+      "witnessNode": false
+    }
+  ],
   "largeImage": {
     "name": "openSUSE-Leap-15.3-3-DVD-x86_64-Build38.1-Media.iso",
     "url": "https://mirrors.bfsu.edu.cn/opensuse/distribution/leap/15.3/iso/openSUSE-Leap-15.3-3-DVD-x86_64-Build38.1-Media.iso"
