--- a/cypress/package.json
+++ b/cypress/package.json
@@ -10,6 +10,7 @@
     "@cypress/vue": "^2.2.3",
     "@types/adm-zip": "^0.4.34",
     "@types/cookie": "^0.5.1",
+    "@types/cypress": "^1.1.3",
     "@types/js-yaml": "^4.0.5",
     "cy-verify-downloads": "^0.1.8",
     "cypress-dotenv": "^2.0.0",
@@ -21,8 +22,7 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
-    "@types/cypress": "^1.1.3",
-    "adm-zip": "^0.5.9",
+    "adm-zip": "0.5.9",
     "cookie": "^0.4.2",
     "cookie-parser": "^1.4.6",
     "cypress": "10.8",
