--- a/config.yml
+++ b/config.yml
@@ -11,6 +11,8 @@ vlan-id: 1
 # Physical NIC for VLAN. Default is "harvester-mgmt"
 vlan-nic: 'harvester-mgmt'
 ip-pool-subnet: '192.168.0.0/24'
+ip-pool-start: ''
+ip-pool-end: ''
 
 # Wait time for polling operations
 wait-timeout: 600
