--- a/config.yml
+++ b/config.yml
@@ -31,6 +31,8 @@ image-cache-url: ''
 terraform-scripts-location: 'terraform_test_artifacts'
 # Rancher provider version, leave empty for the latest version. e.g. '' or '3.1.1'.
 terraform-provider-rancher: ''
+# Harvester provider version, leave empty for the latest version. e.g. '' or '0.6.3'.
+terraform-provider-harvester: ''
 
 # Backup Target S3
 s3-endpoint: ''
