--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py36,py38,pep8,testenv
+envlist = py38,py311,pep8,testenv
 # TODO(gyee): we are not distributing the test code right now. Will need
 # to revisit this once we have majority of the tests developed.
 skipsdist = True
@@ -20,6 +20,9 @@ commands =
   pytest -c {env:PYTEST_CONFIG:{toxinidir}/tox.ini} {posargs}
 passenv = http_proxy,HTTP_PROXY,https_proxy,HTTPS_PROXY,no_proxy,NO_PROXY,PBR_VERSION
 
+[testenv:py311]
+basepython = python3.11
+
 [testenv:pep8]
 deps = flake8
 commands =
@@ -31,7 +34,3 @@ max-line-length = 99
 [pytest]
 initial_sort = original
 render_collapsed = all
-
-[testenv:py36]
-setenv =
-    PYTEST_CONFIG = {toxinidir}/py36_pytest.ini
