--- a/tox.ini
+++ b/tox.ini
@@ -18,7 +18,7 @@ commands =
   {toxinidir}/terraform_test_artifacts/terraform_install.sh
   find . -type f -name "*.pyc" -delete
   pytest -c {env:PYTEST_CONFIG:{toxinidir}/tox.ini} {posargs}
-passenv = http_proxy,HTTP_PROXY,https_proxy,HTTPS_PROXY,no_proxy,NO_PROXY,PBR_VERSION
+passenv = http_proxy,HTTP_PROXY,https_proxy,HTTPS_PROXY,no_proxy,NO_PROXY,PBR_VERSION,GITHUB_USERNAME,GITHUB_ACCESS_TOKEN
 
 [testenv:py311]
 basepython = python3.11
